# quarto_presentations

./: .gitignore  README.md  _quarto.yml  pyproject.toml  template.qmd
examples/lms_pres/: presentation_lms_like.qmd
examples/uni_lu_pres/: presentation_uni_lu_like.qmd
resources/: title-slide.html
resources/bibliography/: references.bib
resources/csv/: RF_HE.csv  RF_exp_.csv
resources/pages_style/: styles.css
