[project]
name = "quarto-presentations"
version = "0.1.0"
description = "environment dependencies of the template"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "folium>=0.20.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.9",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "plotly>=6.7.0",
    "pyyaml>=6.0.3",
    "seaborn>=0.13.2",
]
